refactor(property): move to v2 property